--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
 	<title>Oh Tg Toi</title>
 
 </head>
-   <body>
-   	<center>
-   	   	<audio autoplay="autoplay" controls>
-   	   		<source src="ohtg.mp3" />
-   	   	</audio>
-   	</center>
-   </body>
+<body>
+	<center>
+		<audio autoplay>
+			<source id="vid" src="ohtg.mp3" type="audio/mpeg">
+		</audio>
+	</center>
+	<script>
+		document.getElementById('vid').play();
+	</script>
+</body>
 </html>
