--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	<audio id="nyan" src="ohtg.mp3" preload="metadata" type="audio/mpeg">
 		Your browser does not support the audio element.
 	 </audio>
-	 <a class="btn" id="nyan-btn">play / pause</a>
+	 <a class="btn" id="nyan-btn">oh ta gueule</a>
 	 <script>
 		 var nyan = document.getElementById('nyan');
 		var nyanBtn = document.getElementById('nyan-btn');
